# draw-bitch

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: api.py  config.py  logging_setup.py  main.py  schemas.py  ws.py
backend/app/game/: lobby.py  manager.py  scoring.py  words.py
backend/tests/: conftest.py  test_api.py  test_lobby.py  test_manager.py  test_scoring.py  test_words.py
deploy/: auto-update.sh
deploy/nginx/: draw-bitch.conf
docs/superpowers/plans/: 2026-06-29-draw-bitch.md
docs/superpowers/specs/: 2026-06-29-draw-bitch-design.md
frontend/: .dockerignore  .env.development  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/lobby/[id]/: Canvas.tsx  Chat.tsx  GameBoard.tsx  Scoreboard.tsx  Timer.tsx  Toolbar.tsx  WaitingRoom.tsx  page.tsx
frontend/lib/: api.ts  types.ts  useGameSocket.ts
