[project]
name = "draw-bitch"
version = "0.1.0"
description = "Реалтайм-игра «рисуй и угадывай» для игры с друзьями"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.1",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]
# Транспорт и точка входа покрываются вручную/интеграционно, а не unit-тестами.
omit = ["app/main.py", "app/ws.py", "app/logging_setup.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.13"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
